1. Added pom.xml file with plugins. 2. Added dependencies from main